src/deployment/ingress/liandi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 153.150.79.112/32,223.112.10.160/29
spec:
  tls:
  - hosts:
    - test.azure.liandisys.com.cn
    secretName: ingress-tls-secret
  rules:
  rules:
  - host: test.azure.liandisys.com.cn
    http:
      paths:
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /
